fixed project background images placement on mobile

--- a/src/projects.css
+++ b/src/projects.css
@@ -138,6 +138,7 @@
         height: 15rem;
         background-size: 20rem;
         background-position-x: 2.5rem;
+        background-position-y: 0.4rem;
     }
 }
 
@@ -146,6 +147,7 @@
         height: 15rem;
         background-size: 20rem;
         background-position-x: 2.5rem;
+        background-position-y: 0.4rem;
     }
 }
 
